--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,10 @@
 .container{
-  @apply h-[60vh] lg:h-full flex flex-col lg:flex-row items-center justify-center xl:justify-around px-0 lg:px-[8.25rem];
+  @apply h-[60vh] 
 }
-
 .photo{
+  @apply w-full h-[250px] md:h-[450px] rounded-[20%] mt-4 md:mt-0
+}
+.photoContainer{
   @apply w-full lg:w-[40%] flex items-center justify-center;
 }
 
@@ -10,23 +12,18 @@
   @apply w-full lg:w-[55%]
 }
 
-.name{
-  @apply text-center lg:text-left text-black font-bold text-[2rem] xl:text-[3.1rem] leading-[120%] xl:leading-[3.75rem];
+.home{
+  @apply h-full py-4 lg:h-full flex flex-col lg:flex-row items-center justify-center xl:justify-around;
 }
 
-.title{
-  @apply text-center lg:text-left text-black font-light text-[1rem] xl:text-[2rem] leading-[120%] xl:leading-[2.375rem];
+.welcome{
+  @apply text-[1.5rem] lg:text-[3rem] text-center font-bold;
 }
 
-.hobby, .expertise{
-  @apply hidden lg:block text-black font-light text-[0.75rem] xl:text-[1.25rem] leading-[1.875rem] flex;
+.findCapsules{
+  @apply h-full py-4
 }
 
-.hobby h3, .expertise h3{
-@apply font-medium mr-1
-}
-
-/* Utility Styles */
-.br{
-  @apply block lg:hidden
+.capsules{
+  @apply h-full py-4
 }
