update: Add feedback screens

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html {
 
 /* Card Container Alignment */
 .align-cards{
-  @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-8 h-fit;
+  @apply grid grid-cols-1 md:grid-cols-4  gap-8 h-fit;
 }
 
 /* Center an item with flexbox */
